...
      style={[
        styles.inputContainer,
        { paddingBottom: Platform.OS === 'ios' ? insets.bottom : 0 },
      ]}
    >
      <TextInput
        testID="chatInput"
        style={styles.input}
        placeholder={t('chat.newMsg')}
        placeholderTextColor="rgba(255, 255, 255, 0.7)"
        value={value}
        onChangeText={setValue}
        onSubmitEditing={forceSubmit}
...
