...
          paddingLeft: insets.left + 8,
          paddingRight: insets.right + 8,
        }]}
      >
        <View style={styles.inputContainer}>
          <TextInput
            testID="roomSearchInput"
            accessibilityLabel="roomSearchInput"
            style={[styles.searchInput, baseStyles.text]}
            placeholder={t('settings.search')}
            value={searchText}
            onChangeText={handleSearch}
            autoCorrect={false}
...
